# mtg-card-scraper

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  app.py  base_scraper.py  base_vendor.py  debug_raw.json  debug_scrape.py  deploy.sh  entities.json  flake.nix  main.py  mempalace.yaml  mtg_best_prices.csv  pyproject.toml  scraper_config.py  scraper_manager.py  scraper_utils.py  scryfall.py  streamlit_app.py  test_scrapers.py  test_shipping_gate.py  todo.MD  uv.toml
.cache/: scryfall_sets.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 88npalip4jvygc477v5rn23v2qx95dva-source
api/: job_store.py  main.py  models.py  sse.py
api/routes/: cart.py  parse.py  recalculate.py  scrape.py  vendors.py
cart/: __init__.py  cart_handler.py
frontend/: package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: api.ts  stores.ts  types.ts
frontend/src/routes/: +page.svelte
scrapers/: __init__.py  cryptmtg_scraper.py  facetofacegames_scraper.py  magicarte_scraper.py
vendors/: __init__.py  cryptmtg.py  facetofacegames.py  godsarena.py  imaginaire.py  magicarte.py  mythicstore.py
