[project]
name = "mtg-card-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "selenium>=4.36.0",
    "undetected-chromedriver>=3.5.0",
    "setuptools",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
streamlit = ["streamlit>=1.41.0"]
